# bk7231_cmake_sdk

./: .gitignore  CMakeLists.txt  README.md  Toolchain.cmake
examples/: CMakeLists.txt  README.md
examples/hello_world/: main.c
examples/net_mqtt/: mqtt_echo.c  mqtt_test.c
examples/peri_flash/: test_flash.c
examples/wifi_scan/: wifi_scan.c
examples/wifi_softap/: wifi_softap.c
examples/wifi_station/: wifi_station.c
platform/: bk7231t.ld
platform/bk7231t/: CMakeLists.txt
platform/bk7231t/app/config/: sys_config.h
platform/bk7231t/driver/include/: uart_pub.h
platform/bk7231t/func/include/: wlan_ui_pub.h
platform/bk7231t/func/lwip_intf/lwip-2.0.2/src/include/lwip/: sockets.h
tools/: beken_packager_wrapper
